<resources>
    <string name="app_name">Atomic</string>
    <string name="personalization_settings">Personalization</string>
    <string name="open_table_button">Open table</string>
    <string name="element_description_title">Description</string>
    <string name="favorite_settings_title">Favorite Bar</string>
    <string name="favorite_settings_general">General</string>
    <string name="favorite_settings_temperatures">Temperatures</string>
    <string name="favorite_settings_atomic_properties">Atomic properties</string>
    <string name="favorite_settings_thermodynamics">Thermodynamics</string>
    <string name="unit_settings_title">Table Units</string>
    <string name="unit_temperature">Temperatures</string>
    <string name="isotopes_title">Isotopes</string>
    <string name="ph_title">pH-Indicators</string>
    <string name="other_settings">Advanced</string>
    <string name="experimental_title">Experimental Settings</string>
    <string name="experimental_text">Additional experimental settings</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="clear_cache_text">cache_size</string>
    <string name="submit_activity_title">Submit issue</string>
    <string name="submit_data_i">Data Issue</string>
    <string name="submit_bug">Bug</string>
    <string name="submit_question">Question</string>
    <string name="submit_issue">Issue</string>
    <string name="description">Description</string>
    <string name="submit_send">Submit issue</string>
    <string name="submit_title">Report Issue</string>
    <string name="submit_text">Report bugs and data errors</string>
    <string name="licenses_title">Licenses</string>
    <string name="licenses_text">Licenses of works used by Atomic</string>
    <string name="info_title">Information</string>
    <string name="info_text">App version and details</string>
    <string name="license_title">Licenses</string>
    <string name="activity_table_title">Tables</string>
    <string name="table_ph">pH-Indicators</string>
    <string name="table_ph_text">A pH-indicator table for colors on different acid/ base levels</string>
    <string name="table_electrochemical">Electrochemical Series</string>
    <string name="table_electrochemical_text">A table with an electrochemical series, sorted by (-) to (+) voltage</string>
    <string name="table_equations">Formulas</string>
    <string name="table_equations_text">A table containing formulas for math, physics and chemistry</string>
    <string name="table_solubility">Solubility Table</string>
    <string name="table_solubility_text">A table with information of different substances solubility</string>
    <string name="table_ionization">Ionization Energies</string>
    <string name="table_ionization_text">A table with different elements ionization energies</string>
    <string name="table_nuclide">Table of Nuclides</string>
    <string name="table_nuclide_text">A two-dimensional table of nuclide, with color differentiating decay type</string>
    <string name="activity_unit_title">Table Units</string>
    <string name="activity_equations_title">Formulas</string>
    <string name="activity_ph_title">pH Indicators</string>
    <string name="activity_ph_acid">Acid</string>
    <string name="activity_ph_neutral">Neutral</string>
    <string name="activity_ph_alkaline">Alkaline</string>
    <string name="activity_ph_methyl_orange">Methyl-orange</string>
    <string name="activity_ph_bromothymol_blue">Bromothymol Blue</string>
    <string name="activity_ph_congo_red">Congo Red</string>
    <string name="activity_ph_phenolphthalein">Phenolphthalein</string>
    <string name="activity_io_title">Ionization Energies</string>
    <string name="twitter">https://www.twitter.com/jlindemanndev</string>
    <string name="instagram">https://www.instagram.com/jlindemanndev</string>
    <string name="facebook">https://www.facebook.com/jlindemanndev</string>
    <string name="homepage">https://www.jlindemann.se/homepage</string>
    <string name="solubility_info_t">Solubility Help</string>
    <string name="solubility_info_c">"S: Soluble\nSs: Slightly Soluble\nI: Insoluble"</string>
    <string name="electrochemical_series">Electrochemical Series</string>
    <string name="electrochemical_series_search">Search for Element</string>
    <string name="short_voltage"> (Volt)</string>
    <string name="data_issue">Data Issue</string>
    <string name="bug">Bug</string>
    <string name="question">Question</string>
    <string name="chip_chemistry">Chemistry</string>
    <string name="chip_physics">Physics</string>
    <string name="chip_math">Mathematics</string>
    <string name="chip_reactions">Reactions</string>
    <string name="wikipedia_license">Wikipedia Commons</string>
    <string name="wikipedia_license_text">CREATIVE COMMONS CORPORATION IS NOT A LAW FIRM AND DOES NOT PROVIDE LEGAL SERVICES.
        DISTRIBUTION OF THIS LICENSE DOES NOT CREATE AN ATTORNEY-CLIENT RELATIONSHIP. CREATIVE COMMONS PROVIDES THIS INFORMATION ON AN "AS-IS" BASIS. CREATIVE COMMONS MAKES NO WARRANTIES REGARDING THE INFORMATION PROVIDED, AND DISCLAIMS LIABILITY FOR DAMAGES RESULTING FROM ITS USE.\n\nTHE WORK (AS DEFINED BELOW) IS PROVIDED UNDER THE TERMS OF THIS CREATIVE COMMONS PUBLIC LICENSE ("CCPL" OR "LICENSE").
        THE WORK IS PROTECTED BY COPYRIGHT AND/OR OTHER APPLICABLE LAW. ANY USE OF THE WORK OTHER THAN AS AUTHORIZED UNDER THIS LICENSE OR COPYRIGHT LAW IS PROHIBITED.
        BY EXERCISING ANY RIGHTS TO THE WORK PROVIDED HERE, YOU ACCEPT AND AGREE TO BE BOUND BY THE TERMS OF THIS LICENSE. TO THE EXTENT THIS LICENSE MAY BE CONSIDERED TO BE A CONTRACT, THE LICENSOR GRANTS YOU THE RIGHTS CONTAINED HERE IN CONSIDERATION OF YOUR ACCEPTANCE OF SUCH TERMS AND CONDITIONS.</string>
    <string name="sothree_license">Android Sliding Up Panel</string>
    <string name="sothree_license_text">Copyright 2015 Anton Lopyrev\n\nLicensed under the Apache License, Version 2.0 (the "License");you may not use this file except in compliance with the License.You may obtain a copy of the License at
    \n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\n   Unless required by applicable law or agreed to in writing, softwaredistributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions andlimitations under the License.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="calculator">Calculator</string>
    <string name="element">Element</string>
    <string name="_1">1</string>
    <string name="no_results">No results</string>
    <string name="try_searching_for_another_word_or_check_your_spelling">Try searching for another word or check your spelling.</string>
    <string name="dictionary">Dictionary</string>
    <string name="search_for_dictionary_item">Search For Dictionary Item</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="periodic_table">Periodic Table</string>
    <string name="submit_data_issue">Submit Data Issue</string>
    <string name="search_for_formulas">Search For Formulas</string>
    <string name="experimental">Experimental</string>
    <string name="warning_these_settings_are_either_early_in_development_or_very_unstable_enable_at_your_own_risk">WARNING: These settings are either early in development or very unstable. Enable at your own risk!</string>
    <string name="enable_zoom_in_tables">Enable Zoom in tables</string>
    <string name="show_molar_mass">Show Molar Mass</string>
    <string name="show_stp_phase">Show STP Phase</string>
    <string name="show_electronegativity">Show Electronegativity</string>
    <string name="show_density">Show Density</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="show_boiling_point">Show Boiling Point</string>
    <string name="show_melting_point">Show Melting Point</string>
    <string name="show_atomic_radius_empirical">Show Atomic Radius (Empirical)</string>
    <string name="show_atomic_radius_calculated">Show Atomic Radius (Calculated)</string>
    <string name="show_covalent_radius">Show Covalent Radius</string>
    <string name="show_van_der_waals_radius">Show Van Der Waals Radius</string>
    <string name="show_fusion_heat">Show Fusion Heat</string>
    <string name="show_specific_heat_capacity">Show Specific Heat Capacity</string>
    <string name="show_vaporization_heat">Show Vaporization Heat</string>
    <string name="roy93group">Roy93Group</string>
    <string name="atomic_periodic_table">Atomic - Periodic Table</string>
    <string name="about">About</string>
    <string name="search_for_isotopes">Search For Isotopes</string>
    <string name="nuclide_table">Nuclide Table</string>
    <string name="card_order">Card Order</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="select_theme">Select Theme</string>
    <string name="favorite_bar">Favorite Bar</string>
    <string name="personalise_the_favorite_bar">Personalise the favorite bar</string>
    <string name="detail_card_order">Detail Card Order</string>
    <string name="customize_order_of_detail_cards">Customize order of Detail Cards</string>
    <string name="table_units">Table Units</string>
    <string name="customize_the_units_in_the_main_table">Customize the units in the main table</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="disables_loading_of_images">Disables loading of images</string>
    <string name="wikipedia_commons">Wikipedia Commons</string>
    <string name="sothree_android_sliding_up_panel">Sothree Android Sliding Up Panel</string>
    <string name="solubility_table">Solubility Table</string>
    <string name="beta">Beta</string>
    <string name="atomic_properties">Atomic Properties</string>
    <string name="oxidation_states">Oxidation States:</string>
    <string name="electron_configuration">Electron Configuration:</string>
    <string name="electron_config_text">electron_config_text</string>
    <string name="ion_charge">Ion Charge:</string>
    <string name="ion_charge_text">ion_charge_text</string>
    <string name="ionization_energies">Ionization Energies:</string>
    <string name="ionization_energies_text">ionization_energies_text</string>
    <string name="atomic_radius_empirical">Atomic Radius (Empirical):</string>
    <string name="atomic_radius_e_text">atomic_radius_e_text</string>
    <string name="atomic_radius_calculated">Atomic Radius (Calculated):</string>
    <string name="atomic_radius_text">atomic_radius_text</string>
    <string name="covalent_radius">Covalent Radius:</string>
    <string name="covalent_radius_text">covalent_radius_text</string>
    <string name="van_der_waals_radius">Van Der Waals Radius:</string>
    <string name="van_der_waals_radius_text">van_der_waals_radius_text</string>
    <string name="element_description">Element Description</string>
    <string name="read_more">Read More</string>
    <string name="electromagnetic_properties">Electromagnetic Properties</string>
    <string name="electrical_type">Electrical Type:</string>
    <string name="element_name">element_name</string>
    <string name="resistivity">Resistivity:</string>
    <string name="magnetic_type">Magnetic Type:</string>
    <string name="nuclear_properties">Nuclear Properties</string>
    <string name="radioactive">Radioactive:</string>
    <string name="radioactive_text">radioactive_text</string>
    <string name="isotopes">Isotopes:</string>
    <string name="view_all_isotopes">View all Isotopes</string>
    <string name="neutron_cross_sectional">Neutron Cross Sectional:</string>
    <string name="neutron_cross_sectional_text">neutron_cross_sectional_text</string>
</resources>