<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="PrivateResource">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/physicsProperties"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="9dp"
            android:drawableStart="@drawable/overview_icon"
            android:drawablePadding="9dp"
            android:drawableTint="?attr/colorPrimary"
            android:text="@string/atomic_properties"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.75"
            android:background="?attr/colorOnSecondaryContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/electron_Config_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/oxidation_states"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/oxView"
            layout="@layout/view_oxidiation_states"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/electronConfigTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/electron_configuration"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/electronConfigText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/electron_config_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.25"
            android:background="?attr/colorOnSecondaryContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ionChargeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/ion_charge"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ionChargeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ion_charge_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.25"
            android:background="?attr/colorOnSecondaryContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ionization_energies_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/ionization_energies"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ionizationEnergiesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ionization_energies_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.25"
            android:background="?attr/colorOnSecondaryContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atomicRadiusETitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/atomic_radius_empirical"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atomicRadiusEText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/atomic_radius_e_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.25"
            android:background="?attr/colorOnSecondaryContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atomicRadiusTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/atomic_radius_calculated"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atomicRadiusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/atomic_radius_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.25"
            android:background="?attr/colorOnSecondaryContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/covalentRadiusTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/covalent_radius"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/covalentRadiusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/covalent_radius_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.25"
            android:background="?attr/colorOnSecondaryContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vanDerWaalsRadiusTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/van_der_waals_radius"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vanDerWaalsRadiusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/van_der_waals_radius_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textIsSelectable="true"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
