<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="18dp"
        android:gravity="center_vertical"
        android:text="@string/element_description_title"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/element_description"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="18dp"
        android:paddingBottom="36dp"
        android:text="@string/element_description"
        android:textIsSelectable="true"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_text_ripple"
        android:paddingStart="9dp"
        android:paddingEnd="9dp"
        android:text="@string/read_more"
        android:textColor="?attr/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
