<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="PrivateResource">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/physicsProperties"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="9dp"
            android:drawableStart="@drawable/ic_nucleari"
            android:drawablePadding="9dp"
            android:drawableTint="?attr/colorPrimary"
            android:text="@string/nuclear_properties"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.75"
            android:background="?attr/colorOnSecondaryContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/radioactiveTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/radioactive"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/radioactiveText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/radioactive_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.25"
            android:background="?attr/colorOnSecondaryContainer" />

        <FrameLayout
            android:id="@+id/isotopesFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/isotopesIcon"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:padding="18dp"
                android:rotation="270"
                app:srcCompat="@drawable/ic_arrow"
                app:tint="?attr/colorTertiary" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="64dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/isotopesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/isotopes"
                    android:textColor="?attr/colorOnSecondaryContainer"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/isotopesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/view_all_isotopes"
                    android:textColor="?attr/colorOnSecondaryContainer"
                    android:textSize="14sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:alpha="0.25"
            android:background="?attr/colorOnSecondaryContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/neutronCrossSectionalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="2dp"
            android:text="@string/neutron_cross_sectional"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/neutronCrossSectionalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/neutron_cross_sectional_text"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:textIsSelectable="true"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
